# zapier-triggers

./: .env.example  .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  amplify.yml  currentstate.md  mock_sender.py
Zapier-Style Dashboard/: README.md  index.html  package.json
Zapier-Style Dashboard/src/: App.tsx  index.css
Zapier-Style Dashboard/src/components/: ActivityFeed.tsx  Header.tsx  Sidebar.tsx  TestPanel.tsx  WorkflowView.tsx
app/: database.py  main.py  schemas.py
app/routers/: events.py
backend/: .env.example  DOCKER-README.md  Dockerfile  ECS-DEPLOYMENT.md  docker-compose.yml  ecs-task-definition.json  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: events.py
backend/tests/: test_events.py
docs/: NEXTJS_PYTHON_SETUP.md  aws-deployment-recap.md  brainstorm.md
frontend/: .env.production  README.md  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/docs/: page.tsx
frontend/app/system/: page.tsx
frontend/components/: ErrorBoundary.tsx
frontend/components/events/: ActivityFeed.tsx  EventTestPanel.tsx  StatusBadge.tsx
frontend/components/layout/: Header.tsx  Sidebar.tsx
frontend/components/ui/: button.tsx  dialog.tsx  select.tsx  tooltip.tsx
frontend/lib/: api.ts  eventTemplates.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/events/: ActivityFeed.tsx  EventTestPanel.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  eventTemplates.ts  formatTime.ts
frontend/types/: api.ts
scripts/: mock_sender.py
(+4 files in other folders)
